--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "scripts": {
     "test": "jest --verbose --runInBand",
     "dev": "ts-node-dev --cls --rs --ignore-watch node_modules src/server.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "run-migrate": "yarn typeorm migration:run -d src/data-source.ts",
+    "reverte-migrate": "yarn typeorm migration:revert -d src/data-source.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -15,6 +18,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
     "@types/jsonwebtoken": "^9.0.1",
